; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath6kl/extr_usb.c_ath6kl_usb_device_detached.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/ath/ath6kl/extr_usb.c_ath6kl_usb_device_detached.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_interface = type { i32 }
%struct.ath6kl_usb = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_interface*)* @ath6kl_usb_device_detached to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ath6kl_usb_device_detached(%struct.usb_interface* %0) #0 {
  %2 = alloca %struct.usb_interface*, align 8
  %3 = alloca %struct.ath6kl_usb*, align 8
  store %struct.usb_interface* %0, %struct.usb_interface** %2, align 8
  %4 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %5 = call %struct.ath6kl_usb* @usb_get_intfdata(%struct.usb_interface* %4)
  store %struct.ath6kl_usb* %5, %struct.ath6kl_usb** %3, align 8
  %6 = load %struct.ath6kl_usb*, %struct.ath6kl_usb** %3, align 8
  %7 = icmp eq %struct.ath6kl_usb* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %21

9:                                                ; preds = %1
  %10 = load %struct.ath6kl_usb*, %struct.ath6kl_usb** %3, align 8
  %11 = getelementptr inbounds %struct.ath6kl_usb, %struct.ath6kl_usb* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @ath6kl_stop_txrx(i32 %12)
  %14 = call i32 @mdelay(i32 20)
  %15 = load %struct.ath6kl_usb*, %struct.ath6kl_usb** %3, align 8
  %16 = getelementptr inbounds %struct.ath6kl_usb, %struct.ath6kl_usb* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @ath6kl_core_cleanup(i32 %17)
  %19 = load %struct.ath6kl_usb*, %struct.ath6kl_usb** %3, align 8
  %20 = call i32 @ath6kl_usb_destroy(%struct.ath6kl_usb* %19)
  br label %21

21:                                               ; preds = %9, %8
  ret void
}

declare dso_local %struct.ath6kl_usb* @usb_get_intfdata(%struct.usb_interface*) #1

declare dso_local i32 @ath6kl_stop_txrx(i32) #1

declare dso_local i32 @mdelay(i32) #1

declare dso_local i32 @ath6kl_core_cleanup(i32) #1

declare dso_local i32 @ath6kl_usb_destroy(%struct.ath6kl_usb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
